# Alune

./: .flake8  .gitignore  .pylintrc  Alune.spec  README.md  main.py  pyproject.toml  watchdog.py
.github/workflows/: build.yml  lint.yml  linting.yml  main.yml
.zed/: settings.json
alune/: adb.py  adb_usb.py  config.py  helpers.py  images.py  screen.py
alune/adb/: __init__.py  adb.py
alune/resources/: config.yaml
alune/tft/: app.py  game.py  structure.md
alune/tft/planning/: economy.py  items.py  placing.py  planning.py
alune/vision/: digit_ocr.py
alune/vision/models/paddle_rec/: model.onnx
