[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alune"
version = "0.1.4"
authors = [
  {name = "akshualy"},
  {name = "Detergent13"},
  {name = "Kyrluckechuck"},
]
description = "Teamfight Tactics (TFT) bot for the mobile version, to farm events/tokens."
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "adb-shell[async]==0.4.4",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "google-play-scraper==1.2.6",
    "loguru==0.7.2",
    "ruamel.yaml==0.18.6",
    "psutil==6.0.0",
]

[project.optional-dependencies]
dev = [
    "black==24.4.0",
    "flake8==7.0.0",
    "isort==5.13.2",
    "pylint==3.1.0",
    "pyinstaller==6.6.0",
]

[project.urls]
Repository = "https://github.com/TeamFightTacticsBots/Alune.git"
"Bug Tracker" = "https://github.com/TeamFightTacticsBots/Alune/issues"

[tool.setuptools]
py-modules = ["alune"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
force_sort_within_sections = true
lexicographical = true
single_line_exclusions = ["typing"]
order_by_type = false
group_by_package = true
skip_glob = [ "alune-venv/*" ]

[tool.pytest.ini_options]
addopts = "--pylint"
